EX-PROJECTS/k8s-tasks/task1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: pavan-ns-hju2026
  labels:
    app: frontend
    tier: web
    environment: dev
    version: v1.0
spec:
  containers:
  - name: nginx
    image: nginx:1.21
