EX-PROJECTS/k8s-tasks/test-quota.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quota-test
  namespace: pavan-ns-hju2026
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        cpu: "5"
        memory: "10Gi"
