EX-PROJECTS/k8s-tasks/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: pavan-ns-hju2026
  labels:
    app: frontend
    tier: web
    environment: dev
    version: v1.0
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        tier: web
        environment: dev
        version: v1.0
    spec:
      containers:
      - name: nginx
        image: nginx:1.21
        
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: pavan-ns-hju2026
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
