EX-PROJECTS/k8s-tasks/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless-service
  namespace: pavan-ns-hju2026
spec:
  clusterIP: None
  selector:
    app: db
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: pavan-ns-hju2026
spec:
  serviceName: mysql-headless-service
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: compute-type
                operator: In
                values:
                - memory-optimized
      tolerations:
      - key: dedicated
        operator: Equal
        value: database
        effect: NoSchedule
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes: []
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: manual
      resources:
        requests:
          storage: 5Gi
