EX-PROJECTS/k8s-tasks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudvault-ingress
  namespace: pavan-ns-hju2026
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: pavan-nginx
  tls:
  - hosts:
    - cloudvault.local
    secretName: cloudvault-tls
  rules:
  - host: cloudvault.local
    http:
      paths:
      - path: /vault
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
